properly spacing terms to better generate facets and hopefully get search derivative to run

--- a/_keywords/d0127.md
+++ b/_keywords/d0127.md
@@ -8,8 +8,8 @@ doc_origin: New Orleans
 language: French
 archive: Louisiana Historical Center
 governing_body: French Superior Council
-names_black: 'Antoine, Fauchon, Vulcain, unnamed "mulatre Espagnol" enslaved by Gonzalez '
-names_white: 'Chaperon, Gonzalez, Henry '
+names_black: Antoine|Fauchon|Vulcain|unnamed "mulatre Espagnol" enslaved by Gonzalez
+names_white: Chaperon|Gonzalez|Henry
 names_native:
 doc_type: Judicial Acts,Criminal Cases / Acts,"Report (of Event, Action, Crime, etc.)"
 abstract: Enslaver Chaperon declared that on July 28th, 1739 while he was away from
@@ -19,7 +19,7 @@ abstract: Enslaver Chaperon declared that on July 28th, 1739 while he was away f
   with them despite having "les jambes coupé." They escaped the plantation, according
   to Chaperon, with "un mulatre Espagnol" who stole a boat from his enslaver Gonzalez.
 google_doc_prototype: https://docs.google.com/document/d/1Ph1tkvttVwowlK1eCWi_VA9GUK4mLLNe5ZrvTYAAxHw/edit?usp=share_link
-keywords: marronage,kinship,disability,transportation,collaboration
+keywords: marronage|kinship|disability|transportation|collaboration
 lhc_scans: https://lacolonialdocs-data.s3.amazonaws.com/doc-img-800x0/doc-img-137003.jpg
 layout: keywords_item
 collection: keywords
