--- a/_keywords/d0129.md
+++ b/_keywords/d0129.md
@@ -8,11 +8,10 @@ doc_origin: New Orleans
 language: French
 archive: Louisiana Historical Center
 governing_body: French Superior Council
-names_black: Antoine, Fauchon, and Vulcain (not named in the doc)
-names_white: Chaperon, Destrehan, Bloquin, Jacques Cantrelle, Gonzalez, Augustin Chantalou,
-  Henry Greffe
+names_black: Antoine|Fauchon|Vulcain
+names_white: Chaperon|Destrehan|Bloquin|Jacques Cantrelle|Gonzalez|Augustin Chantalou|Henry Greffe
 names_native:
-doc_type: Notarial Acts,Power of Attorney / Procuration
+doc_type: Notarial Acts|Power of Attorney/Procuration
 abstract: Enslaver Chaperon grants power of attorney to Destrehan in order to recapture
   fugitive slaves seen in Havana. Although Chaperon does not name the enslaved people
   in this document, he references his Nov 7, 1739 declaration of runaway slaves (when
@@ -23,7 +22,7 @@ abstract: Enslaver Chaperon grants power of attorney to Destrehan in order to re
   granted Destrehan power of attorney in collaboration with Mr. Bloquin, the French
   Consul in Cuba, to recapture Vulcain and potentially Antoine and Fauchon.
 google_doc_prototype: https://docs.google.com/document/d/1bxAhBPPEWYqnTQLh_2T2AJHpfZDgEKM6CWE9fqrEIJg/edit?usp=share_link
-keywords: marronage,disability,fugitivity
+keywords: marronage|disability|fugitivity
 lhc_scans: https://lacolonialdocs-data.s3.amazonaws.com/doc-img-800x0/doc-img-145195.jpg
 layout: keywords_item
 collection: keywords
