--- a/_keywords/d0137.md
+++ b/_keywords/d0137.md
@@ -7,15 +7,15 @@ doc_origin: New Orleans
 language: French
 archive: Louisiana Historical Center
 governing_body: French Superior Council
-names_black: Cezar (Caesar, Cesar), Mama "Julie" Comba
-names_white: M. Dabbadie, M. Foucault, M. Delaronde, Louis Duchein, Alexandre de Latil,
-  Simon Chevret (Monthureux), Elizabeth Livret, Adam Augustine Lafleur, Lafleur, Pierre
-  Zeringue, M. Jung, Garic, Madame Mandeville
-names_native: Marguerite (free Indian), "la sauvagesse de Blancpain"
-doc_type: Judicial Acts,Criminal Cases / Acts,Investigation
+names_black: Cezar (Caesar|Cesar)|Mama "Julie" Comba
+names_white: M. Dabbadie|M. Foucault|M. Delaronde|Louis Duchein|Alexandre de Latil,
+  Simon Chevret (Monthureux)|Elizabeth Livret|Adam Augustine Lafleur|Lafleur|Pierre
+  Zeringue|M. Jung|Garic|Madame Mandeville
+names_native: Marguerite (free Indian)|"la sauvagesse de Blancpain"
+doc_type: Judicial Acts|Criminal Cases/Acts,Investigation
 abstract:
 google_doc_prototype: https://docs.google.com/document/d/1tPaa6PE9y-v5kJpvWsuRu7ABfs-HANa958NtJgo5MtI/edit?usp=share_link
-keywords: marronage,kinship,labor,fugitivity,rival geography,play
+keywords: marronage|kinship|labor|fugitivity|rival geography|play
 lhc_scans: https://www.lacolonialdocs.org/document/10481
 layout: keywords_item
 collection: keywords
