--- a/_keywords/d0210.md
+++ b/_keywords/d0210.md
@@ -10,14 +10,14 @@ governing_body: French Superior Council
 names_black: Raphaël Bernard
 names_white: Dumanoir
 names_native:
-doc_type: Judicial Acts,Civil Cases / Acts,Summons / Return on Service Notice
+doc_type: Judicial Acts|Civil Cases/Acts|Summons/Return on Service Notice
 abstract: "Raphaël Bernard a free Negro who’s been hired in France by Dumanoir complains
   that Dumanoir does not fulfill his promises and also treats him with rigor, depriving
   him of his due salary and clothing. He asked to be sent back to France at Dumanoir
   expense and to have a trunk now detained at the Chaouachas returned to him. \r\n\r\n[A
   notice was sent to Dumanoir to appear next day without fail]"
 google_doc_prototype: https://docs.google.com/document/d/1t9bKGTmkUlfiGEspbWWpwuotdJOy3SYp4VibetfqOmk/edit?usp=share_link
-keywords: freedom,legalism,emancipation,care,work
+keywords: freedom|legalism|emancipation|care|work
 lhc_scans: https://lacolonialdocs-data.s3.amazonaws.com/doc-img-800x0/doc-img-118745.jpg
 layout: keywords_item
 collection: keywords
