--- a/_keywords/d0218.md
+++ b/_keywords/d0218.md
@@ -9,16 +9,16 @@ archive: Louisiana Historical Center
 governing_body: Spanish Judiciary
 names_black: Cathalina (Destrehan), Felicite (Destrehan), Carlota (Destrehan), Manon
   (Destrehan)
-names_white: Juan Renato Gabriel Fazende, Jean Etienne de Boré, Andrés Almonester
-  y Roxas, Lois Ranson, Dionicio Braud, Antoine Thomasin, Nicolas Fromentin, Jacques
-  Santiago Toutant Beauregard (pére), François Broutin, Juan Baptista Destrehan, Juan
-  Bautista Honore Destrehan, Maria Isabel Destrehan, Juan Luis Destrehan, Juan Noel
-  Destrehan, Francisco Lebeau, Estevan Quiñones, Miguel St Elenoy
+names_white: Juan Renato Gabriel Fazende|Jean Etienne de Boré|Andrés Almonester
+  y Roxas|Lois Ranson|Dionicio Braud|Antoine Thomasin|Nicolas Fromentin|Jacques
+  Santiago Toutant Beauregard (pére)|François Broutin|Juan Baptista Destrehan|Juan
+  Bautista Honore Destrehan|Maria Isabel Destrehan|Juan Luis Destrehan|Juan Noel
+  Destrehan|Francisco Lebeau|Estevan Quiñones|Miguel St Elenoy
 names_native:
-doc_type: Notarial Acts,Emancipation (of Slave)
+doc_type: Notarial Acts|Emancipation (of Slave)
 abstract: Petition for self-purchase.
 google_doc_prototype: https://docs.google.com/document/d/15_9zwdKm6R12NqIKP39iH6hwM4YCCl4Lb95n100ONF8/edit?usp=share_link
-keywords: valuation,self-purchase,coartación,womanhood,childhood,kinship,disability,succession,motherhood
+keywords: valuation|self-purchase|coartación|womanhood|childhood|kinship|disability|succession|motherhood
 lhc_scans: https://lacolonialdocs-data.s3.amazonaws.com/doc-img-800x0/doc-img-203597.jpg
 layout: keywords_item
 collection: keywords
