--- a/_keywords/d0264.md
+++ b/_keywords/d0264.md
@@ -8,9 +8,9 @@ language: French
 archive: Louisiana Historical Center
 governing_body: French Superior Council
 names_black: Apollon
-names_white: Sainsone; Denis Braud; Delhomme; Dussau; Augustin Chantalou
+names_white: Sainsone|Denis Braud|Delhomme|Dussau|Augustin Chantalou
 names_native:
-doc_type: Private Documents,Letter,Personal
+doc_type: Private Documents|Letter|Personal
 abstract: Letter from enslaver Sainsone of Martinique to his stepson Denis Braud "au
   Mississpy" in which he informs Braud that having learned of Mr Dussau's departure
   from Martinique to Braud's home just 8 hours before he left, he decided to send
@@ -18,7 +18,7 @@ abstract: Letter from enslaver Sainsone of Martinique to his stepson Denis Braud
   sent with Apollon as well as instructs Braud that he must pay for his passage and
   care "pendant la traversée."
 google_doc_prototype: https://docs.google.com/document/d/17oKASKtkj4RfsmOEK3NIbx3nHgGG1tblPPbXAd1s55E/edit?usp=share_link
-keywords: la traversée,labor,Caribbean
+keywords: la traversée|labor|Caribbean
 lhc_scans: https://lacolonialdocs-data.s3.amazonaws.com/doc-img-800x0/doc-img-159219.jpg
 layout: keywords_item
 collection: keywords
