--- a/_keywords/d0005.md
+++ b/_keywords/d0005.md
@@ -8,17 +8,17 @@ language: Spanish
 archive: Louisiana Historical Center
 governing_body: Spanish Judiciary
 names_black: Baptiste (Bourguinon)
-names_white: Bautista Bourguinon; Laflor; Luis Liotau; Antonio Mendez; Esteban Rodriguez
-  Miró; Alejandro O'Reilly; Manuel Perez; Rafael Perdomo; Juan Doroteo del Postigo
+names_white: Bautista Bourguino|Laflor|Luis Liotau|Antonio Mendez|Esteban Rodriguez
+  Miró|Alejandro O'Reilly|Manuel Perez|Rafael Perdomo|Juan Doroteo del Postigo
   y Balderrama
-names_native: Catalina; Baptiste (Bourguinon); Pedro Morsu; Maria Paget
-doc_type: Judicial Acts,Civil Cases / Acts,Deposition / Interrogation / Testimony
+names_native: Catalina|Baptiste (Bourguinon)|Pedro Morsu|Maria Paget
+doc_type: Judicial Acts|Civil Cases/Acts|Deposition/Interrogation/Testimony
 abstract: 'Freedom suit brought by siblings Pedro (Pierre) Morsu and Maria (Marie)
   Paget against the heirs of Lt. Gov. Francisco de Cruzat. This would prompt a second
   suit for their brother, an enslaved Black-Native man, named Bautista (Baptista/Baptiste)
   Bourgignon (Borguinon). All three siblings are freed. '
 google_doc_prototype: https://docs.google.com/document/d/1RxoP18XadJu3eWhgbOrEYBnpNO_sE1PcLvM_5hv3huM/edit?usp=sharing
-keywords: freedom suit,manumission,Indian slavery,resistance,mixed-race,kinship,race
+keywords: freedom suit|manumission|Indian slavery|resistance|mixed-race|kinship|race
 lhc_scans: https://lacolonialdocs-data.s3.amazonaws.com/doc-img-800x0/doc-img-315146.jpg
 layout: keywords_item
 collection: keywords
