--- a/_keywords/d0128.md
+++ b/_keywords/d0128.md
@@ -1,22 +1,22 @@
 ---
 pid: d0128
 label: Camarades Fanchon, Antoine, and Vulcain Escape from a Plantation below New
-  Orleans to Havana, Cuba (II)
+  Orleans to Havana|Cuba (II)
 filing_date: '1748-03-22'
 full_index: 1748-03-22-01
 doc_origin: New Orleans
 language: French
 archive: Louisiana Historical Center
 governing_body: French Superior Council
-names_black: Manuel, Jean, Soquoy, Susanne, Marianne, Catherine, Jeanne ou ouama (?),
-  Leveille, Cupidon, Marie, Francois, Charlot, Marie Jeanne, Babet, André, Vulcain,
-  Antoine, Fauchon
-names_white: Tisserant/Tixerant, Joseph Chaperon, Aufrere, de Benac, Nicolas Henry
+names_black: Manuel|Jean|Soquoy|Susanne|Marianne|Catherine|Jeanne ou ouama (?),
+  Leveille|Cupidon|Marie|Francois|Charlot|Marie Jeanne|Babet|André|Vulcain,
+  Antoine|Fauchon
+names_white: Tisserant/Tixerant|Joseph Chaperon|Aufrere|de Benac|Nicolas Henry
 names_native:
-doc_type: Notarial Acts,Declaration
+doc_type: Notarial Acts|Declaration
 abstract: Declaration of Manuel and Jean
 google_doc_prototype: https://docs.google.com/document/d/1kO0Anx4lSNUJEw6We8S5svuVARfdzOcXmJ6a1JM9YNo/edit?usp=share_link
-keywords: fugitivity,kinship,marronage,rival geography
+keywords: fugitivity|kinship|marronage|rival geography
 lhc_scans: https://lacolonialdocs-data.s3.amazonaws.com/doc-img-800x0/doc-img-153613.jpg
 layout: keywords_item
 collection: keywords
