--- a/_keywords/d0137.md
+++ b/_keywords/d0137.md
@@ -7,7 +7,7 @@ doc_origin: New Orleans
 language: French
 archive: Louisiana Historical Center
 governing_body: French Superior Council
-names_black: Cezar (Caesar|Cesar)|Mama "Julie" Comba
+names_black: Cezar (Caesar/Cesar)|'Mama "Julie" Comba'
 names_white: M. Dabbadie|M. Foucault|M. Delaronde|Louis Duchein|Alexandre de Latil,
   Simon Chevret (Monthureux)|Elizabeth Livret|Adam Augustine Lafleur|Lafleur|Pierre
   Zeringue|M. Jung|Garic|Madame Mandeville
