--- a/_keywords/d0218.md
+++ b/_keywords/d0218.md
@@ -7,7 +7,7 @@ doc_origin: New Orleans
 language: Spanish
 archive: Louisiana Historical Center
 governing_body: Spanish Judiciary
-names_black: Cathalina (Destrehan), Felicite (Destrehan), Carlota (Destrehan), Manon
+names_black: Cathalina (Destrehan)|Felicite (Destrehan)|Carlota (Destrehan)|Manon
   (Destrehan)
 names_white: Juan Renato Gabriel Fazende|Jean Etienne de Boré|Andrés Almonester
   y Roxas|Lois Ranson|Dionicio Braud|Antoine Thomasin|Nicolas Fromentin|Jacques
