--- a/_includes/excerpts/d0281.md
+++ b/_includes/excerpts/d0281.md
@@ -46,7 +46,7 @@ LHQ v. 10 p. 133 - entry below:
 Pruevas [Pruebas]
 
 
-De Dn. Alexandro Bauré
+De Dn. Alexandro Bauré[^1]
  contra
 Naneta Mulata Libre
 
@@ -287,7 +287,7 @@ Oct 29 1773 [modern, in pencil]
                                         1
 I, Sir Alexandre Boré, by my power in the following action
 against me by Naneta, free mulata, concerning the liberty
-of my negro, Maturine, call into evidence in this case,
+of my negro, Maturine, call into evidence[^evidence] in this case,
 and I give my service to His Lordship that he should
 grant me ten days more time [if God wills]
 
@@ -363,3 +363,7 @@ burdens of his marriage.
 
 
 4. That he himself, and the other testimony that he presents under his own rite, declare as true, open, and not
+
+
+[^1] This is my first footnote
+[^evidence] This is also a footnote
