--- a/_includes/excerpts/d0281.md
+++ b/_includes/excerpts/d0281.md
@@ -365,5 +365,5 @@ burdens of his marriage.
 4. That he himself, and the other testimony that he presents under his own rite, declare as true, open, and not
 
 
-[^1] This is my first footnote
-[^evidence] This is also a footnote
+[^1]: This is my first footnote
+[^evidence]: This is also a footnote
