--- a/_includes/excerpts/d0035.md
+++ b/_includes/excerpts/d0035.md
@@ -1,4 +1,217 @@
-## English Translation 
+## Spanish Transcription  
+
+Año de 1776
+Maria Juana Negra esclava de Don Juan Suriray
+Sobre
+Que su amo se ortorgue
+carta de livert.^d p.^r el precio
+de su estimacion__
+N.o 16-
+M.n.38
+
+
+marginal note:
+[Lo precento 
+la p.^te antemi
+espres.^do no
+sauer firmar.
+oy 28 de Feb.^o
+de 1776 a.~
+doy fee-
+Almonester]
+Maria Juana Negra esclava de D. Juan Suriré y
+ves.^a de esta Ciud.d previa la venia en drõ nes.^a en la mejor
+fra que haia lug.^r parece ante Vs. y digo: q.^e haviendo
+me present.do verbalm.te en el trib.^l de Vs. demandando 
+a dicho mi amo, p.^a q.^e me diese la libertad, mediante
+la cant.d en que fuere estimada, y ordenadole Vs.
+lo executase asi, se há hegado a el’o, en tales~
+Perm.~ q.^e haviendo me tomado con violencia y hecho
+me transportar a la Habit.^n de D. Juan Dubourg
+su suegro (p.a impedirme del uso del d.^ro q.^e me asiste
+y natural defensa q.^e en asunto de estar circunst.s, fa-
+vorecen tanto las leyes) me estrecho en ella con
+priciones; y como quiera q.^e p.^r mis arbitrios me
+escapare de ella, y de las crueldad.s con q.e me moles-
+taba, hé occurrido a esta Cio.d a impetrar la Neta
+administ.n de just.^a q.^e Vs. distribuye; en cuia conceq.ce
+se ha de servir Vs. mandar q.e dicho mi amo me pase
+la corresp.^te carta de libertad entera, a cuio efecto
+se me tare p.^r la pers.^de q.^e Vs. tenga p.^r com.te nom-
+brar, q.^e des.e luego estoi pronta a entregarele la cant.^d
+en q.^e fuese estimada, la qual me adelantara
+una pers.^a q.^e quiere sacarme del Captiberio en
+q.^e estoi: para todo lo q.^e le pongo demanda en fra
+
+
+en cuios termin.s—
+A Vs. sup.^co se sirba proveher y mandar hacer como 
+pido consent.a costas y juro en fra de dro no pro-
+ceder de malicia &^a___
+Otrosi: le have servir Vs. mandar q.^e dicho mi amo no
+me moleste en ning.^n modo impediendome
+el uso libra de el d˜ro q.^e me asiste, p.^a en su virtud
+obrar sin ning.^a dificultad: A Vs. sup.^co se sirba
+proveher como pido q.^e es just.^a q.^e pido ut sup.^a—
+Otrosi: p.^a q.^e haia una pers.^a q.^e repres.^te mis dros y acciones
+nombro a Pedro Cowley Ag.^te de negocios de esta
+Ciu.^d a q.^n confiero el poder en dro nes.^o p.^a la con-
+tinuacion y conclus.^n de esta causa: q.^e es just.^a
+que pido ut supra__
+
+
+En lo pra.s. traslado. En el primer
+otrosi hagarle sauer ad.^n Juan Su-
+rire le dejé el vro[??] libre a esta parte
+para vrar[?] de su drõ, y en el Ultimo
+otrosi como lo prov.^e—
+Unzaga
+
+
+
+Proveiolo el Señor D.^n Luis de Unzaga y 
+Amenazaga Brigadier de los R.^s extõs y
+Gov.~ g~ral de esta Prov.a que lo Firmó en
+la Ciudad de la Nueva Orleans a veinte 
+y ocho de Febrero de mil sete.^s sett.^ta y seis ã--
+Andres Almonester 
+y Roxas n.~ pu.^co
+
+
+N.n En dicho dia lo hice sauer ã Maria Juana
+Negra esclava de D.n Juan Suriray en su
+pers.^a doy fee— 
+Almonester 
+s.^no
+
+
+N.^n En dicho dia lo hice sauer a D.^n Juan
+Suriray en su pers.^a doy fee—
+Almonester
+s.^no
+
+
+Maria Juana Negra esclava
+de D. Juan Suriray por mi poder en 
+los autos que sigo sobre que el 
+dicho. mi amo me otorgue carta de
+libertad por el precio en que fuere
+estimada y lo demas digo que de mi de-
+manda se dió traslado al dicho mi a-
+mo y aunque le fué hecha saver
+y son pasados mas de doze dias, no
+há querido tomar los autos ni
+contestar mi decir cosa alguna en
+cuia rebeldia que le acusa se ha de
+servir V.S. haviendola por acusada[?]
+demandar nombrar de oficio una
+persona Ynteligente que proceda a 
+la estimacion de mi Justo precio con
+
+
+el tercero que nombrare el Dho. mi
+amo y fho. otorgarme la carta de
+libertad por la Cantidad en que fue-
+re estimada y en el Caso que el 
+expresado[??] mi amo no quiera exe-
+cutarlo interponga V.S. su auto-
+ridad y Judicial Decreto a el auto
+en que V.S. se sirva declararme
+por libre como corresponde en Jus-
+ticia por las razones de hecho y de
+drõ. Grãl y siguiente~
+Lo primero por que haviendome com-
+prado del Dho. mi amo quando estava
+soltero y que yo le servía como su
+unica esclava en el servicio inte-
+rior de la Casa, creia el Publico in-
+teligencias ocultas que divulgadas
+y haviendose Casado el dho. mi amo
+há querido dar satisfaction al Pub.co
+
+
+y a mi ama dandome maltrato y
+castigandome el uno y el otro un cru-
+eldad llegando a tal estremo que me
+an negado el Recurso que por pie-
+dad le enconcedio atodos los escla-
+vos de buscar amo a su gusto pa-
+ra por este medio pasar la escla-
+vitud con menos travajo y pena, ni
+querer admitir el precio de dos cien-
+tos y cinquenta pesos en que me 
+compró.
+Lo segundo que dando yo el precio en
+que me estimaren no puede ni deve
+el dho. mi amo negarme la libertad, ni
+hay Ley que lo resista al contrario em
+pesando desde la Divina estan a mi
+favor por que esta no obliga a que
+ningun Cristiano esté en un Captiveria
+como el mio expuesta por el continua
+
+
+Castigo a una Sofocacion, o desespe-
+racion y morir en el letargo sin
+que lo resista la mayor prenda[?]
+El dro. natural recomienda mas
+la libertad que otro; ya se sabe
+que a el que le tocó en suerte deve
+reconocer la esclavitud y obedecer
+a su amo, uno y otro concurre en 
+mi pero teniendo con qué libertar
+me parese mui justo quelo solicite
+y que mi amo naturalmente me
+lo conceda por el precio en que fue-
+re estimada.
+Y ultimam.^te el drõ. real está a mi fa
+vor pues no hay Ley que no me fa
+voresca sobre mi pretencion ental
+grado que no solo está declarado el
+caso de corte a mi favor y la accion
+
+
+libre del mistifori para incoar la
+demanda en el tribunal que me com
+venga; sino que como V.S. sabe una
+ley de partida hablando sobre el a
+sunto dice que si un esclavo tuvie
+re dos amos y el uno le diere la
+libertad graciosa y el otro no quisie
+re el Juez le ha de mandar que lo
+execute y no lo haciendo dandole al
+esclavo copiá Ynterponiendo la au
+toridad y Decreto Judicial le servirá
+de titulo, en forma para gozar de
+su libertad, en cuyos terminos,
+A V.S. Suplico se serva mandar en todo co
+mo llevo pedido por ser de Justa. cos
+tas Juro no proceder de malicia y
+lo necess.^o &^a
+Pedro Ygno. Cowley
+
+
+Haga se le saver a Dn. Juan Suriray
+conteste al traslado que se le ha
+dado de la demanda puesta por 
+esta parte con apercevimiento
+que en su reveldia se dará la prov.^a
+que corresponda y le parara
+perjuicio___
+Unzaga
+
+
+Proveiolo el Sõr Dn. Luis de Unzaga y Ame
+zaga Bragadier de los Rs. extõs y Governr.
+g˜ral de esta Prov.^a q.^e lo firmó en la Ciudad de 
+la Na. Orleans a trese de Marzo de mil setts. settta.
+y Seis años——
+Andres Almonester
+y Roxas s.^no pu.^co
+
+
+## English Translation  
+
 Year of 1776
 Maria Juana Black slave of Don Juan Suriray
 Concerning
@@ -109,7 +322,7 @@ the appreciation of my Fair price with
 
 
 the third appreciator that the aforesaid my master 
-will appoint [FOOTNOTE] and schedule to grant me the letter of
+will appoint [^FOOTNOTE] and schedule to grant me the letter of
 freedom for the Quantity at which I would be
 appreciated and in the Case that the 
 aforementioned my master may not want to 
@@ -123,7 +336,7 @@ bought me when he was
 single and that I served him as his 
 only domestic slave,
 the Public believed (according to 
-secret intelligences[FOOTNOTE], disclosed)
+secret intelligences[^FOOTNOTE], disclosed)
 and the aforesaid my master having Married
 he wanted to give satisfaction to the Public
 
@@ -169,10 +382,10 @@ a degree that I not only am declaring the
 case in court to my favor and the free
 
 
-action of mixed jurisdiction[FOOTNOTE] to commence the
+action of mixed jurisdiction[^FOOTNOTE] to commence the
 lawsuit in the court that suits me;
 but rather that as Your Honor is aware of a
-law of statuary code[FOOTNOTE] speaking on the
+law of statuary code[^FOOTNOTE 2] speaking on the
 matter, it says that if a slave has
 two masters and one freely gives him 
 freedom and the other does not want to,
@@ -207,218 +420,3 @@ seventy-Six---
 Andres Almonester
 y Roxas notary public
 
-
-	
-
-  
-## Spanish Transcription
-Año de 1776
-Maria Juana Negra esclava de Don Juan Suriray
-Sobre
-Que su amo se ortorgue
-carta de livert.^d p.^r el precio
-de su estimacion__
-N.o 16-
-M.n.38
-
-
-marginal note:
-[Lo precento 
-la p.^te antemi
-espres.^do no
-sauer firmar.
-oy 28 de Feb.^o
-de 1776 a.~
-doy fee-
-Almonester]
-Maria Juana Negra esclava de D. Juan Suriré y
-ves.^a de esta Ciud.d previa la venia en drõ nes.^a en la mejor
-fra que haia lug.^r parece ante Vs. y digo: q.^e haviendo
-me present.do verbalm.te en el trib.^l de Vs. demandando 
-a dicho mi amo, p.^a q.^e me diese la libertad, mediante
-la cant.d en que fuere estimada, y ordenadole Vs.
-lo executase asi, se há hegado a el’o, en tales~
-Perm.~ q.^e haviendo me tomado con violencia y hecho
-me transportar a la Habit.^n de D. Juan Dubourg
-su suegro (p.a impedirme del uso del d.^ro q.^e me asiste
-y natural defensa q.^e en asunto de estar circunst.s, fa-
-vorecen tanto las leyes) me estrecho en ella con
-priciones; y como quiera q.^e p.^r mis arbitrios me
-escapare de ella, y de las crueldad.s con q.e me moles-
-taba, hé occurrido a esta Cio.d a impetrar la Neta
-administ.n de just.^a q.^e Vs. distribuye; en cuia conceq.ce
-se ha de servir Vs. mandar q.e dicho mi amo me pase
-la corresp.^te carta de libertad entera, a cuio efecto
-se me tare p.^r la pers.^de q.^e Vs. tenga p.^r com.te nom-
-brar, q.^e des.e luego estoi pronta a entregarele la cant.^d
-en q.^e fuese estimada, la qual me adelantara
-una pers.^a q.^e quiere sacarme del Captiberio en
-q.^e estoi: para todo lo q.^e le pongo demanda en fra
-
-
-en cuios termin.s—
-A Vs. sup.^co se sirba proveher y mandar hacer como 
-pido consent.a costas y juro en fra de dro no pro-
-ceder de malicia &^a___
-Otrosi: le have servir Vs. mandar q.^e dicho mi amo no
-me moleste en ning.^n modo impediendome
-el uso libra de el d˜ro q.^e me asiste, p.^a en su virtud
-obrar sin ning.^a dificultad: A Vs. sup.^co se sirba
-proveher como pido q.^e es just.^a q.^e pido ut sup.^a—
-Otrosi: p.^a q.^e haia una pers.^a q.^e repres.^te mis dros y acciones
-nombro a Pedro Cowley Ag.^te de negocios de esta
-Ciu.^d a q.^n confiero el poder en dro nes.^o p.^a la con-
-tinuacion y conclus.^n de esta causa: q.^e es just.^a
-que pido ut supra__
-
-
-En lo pra.s. traslado. En el primer
-otrosi hagarle sauer ad.^n Juan Su-
-rire le dejé el vro[??] libre a esta parte
-para vrar[?] de su drõ, y en el Ultimo
-otrosi como lo prov.^e—
-Unzaga
-
-
-
-Proveiolo el Señor D.^n Luis de Unzaga y 
-Amenazaga Brigadier de los R.^s extõs y
-Gov.~ g~ral de esta Prov.a que lo Firmó en
-la Ciudad de la Nueva Orleans a veinte 
-y ocho de Febrero de mil sete.^s sett.^ta y seis ã--
-Andres Almonester 
-y Roxas n.~ pu.^co
-
-
-N.n En dicho dia lo hice sauer ã Maria Juana
-Negra esclava de D.n Juan Suriray en su
-pers.^a doy fee— 
-Almonester 
-s.^no
-
-
-N.^n En dicho dia lo hice sauer a D.^n Juan
-Suriray en su pers.^a doy fee—
-Almonester
-s.^no
-
-
-Maria Juana Negra esclava
-de D. Juan Suriray por mi poder en 
-los autos que sigo sobre que el 
-dicho. mi amo me otorgue carta de
-libertad por el precio en que fuere
-estimada y lo demas digo que de mi de-
-manda se dió traslado al dicho mi a-
-mo y aunque le fué hecha saver
-y son pasados mas de doze dias, no
-há querido tomar los autos ni
-contestar mi decir cosa alguna en
-cuia rebeldia que le acusa se ha de
-servir V.S. haviendola por acusada[?]
-demandar nombrar de oficio una
-persona Ynteligente que proceda a 
-la estimacion de mi Justo precio con
-<pb/>
-
-
-<pb facs=doc-img-212687/>
-el tercero que nombrare el Dho. mi
-amo y fho. otorgarme la carta de
-libertad por la Cantidad en que fue-
-re estimada y en el Caso que el 
-expresado[??] mi amo no quiera exe-
-cutarlo interponga V.S. su auto-
-ridad y Judicial Decreto a el auto
-en que V.S. se sirva declararme
-por libre como corresponde en Jus-
-ticia por las razones de hecho y de
-drõ. Grãl y siguiente~
-Lo primero por que haviendome com-
-prado del Dho. mi amo quando estava
-soltero y que yo le servía como su
-unica esclava en el servicio inte-
-rior de la Casa, creia el Publico in-
-teligencias ocultas que divulgadas
-y haviendose Casado el dho. mi amo
-há querido dar satisfaction al Pub.co
-
-
-y a mi ama dandome maltrato y
-castigandome el uno y el otro un cru-
-eldad llegando a tal estremo que me
-an negado el Recurso que por pie-
-dad le enconcedio atodos los escla-
-vos de buscar amo a su gusto pa-
-ra por este medio pasar la escla-
-vitud con menos travajo y pena, ni
-querer admitir el precio de dos cien-
-tos y cinquenta pesos en que me 
-compró.
-Lo segundo que dando yo el precio en
-que me estimaren no puede ni deve
-el dho. mi amo negarme la libertad, ni
-hay Ley que lo resista al contrario em
-pesando desde la Divina estan a mi
-favor por que esta no obliga a que
-ningun Cristiano esté en un Captiveria
-como el mio expuesta por el continua
-
-
-Castigo a una Sofocacion, o desespe-
-racion y morir en el letargo sin
-que lo resista la mayor prenda[?]
-El dro. natural recomienda mas
-la libertad que otro; ya se sabe
-que a el que le tocó en suerte deve
-reconocer la esclavitud y obedecer
-a su amo, uno y otro concurre en 
-mi pero teniendo con qué libertar
-me parese mui justo quelo solicite
-y que mi amo naturalmente me
-lo conceda por el precio en que fue-
-re estimada.
-Y ultimam.^te el drõ. real está a mi fa
-vor pues no hay Ley que no me fa
-voresca sobre mi pretencion ental
-grado que no solo está declarado el
-caso de corte a mi favor y la accion
-
-
-libre del mistifori para incoar la
-demanda en el tribunal que me com
-venga; sino que como V.S. sabe una
-ley de partida hablando sobre el a
-sunto dice que si un esclavo tuvie
-re dos amos y el uno le diere la
-libertad graciosa y el otro no quisie
-re el Juez le ha de mandar que lo
-execute y no lo haciendo dandole al
-esclavo copiá Ynterponiendo la au
-toridad y Decreto Judicial le servirá
-de titulo, en forma para gozar de
-su libertad, en cuyos terminos,
-A V.S. Suplico se serva mandar en todo co
-mo llevo pedido por ser de Justa. cos
-tas Juro no proceder de malicia y
-lo necess.^o &^a
-Pedro Ygno. Cowley
-
-
-Haga se le saver a Dn. Juan Suriray
-conteste al traslado que se le ha
-dado de la demanda puesta por 
-esta parte con apercevimiento
-que en su reveldia se dará la prov.^a
-que corresponda y le parara
-perjuicio___
-Unzaga
-
-
-Proveiolo el Sõr Dn. Luis de Unzaga y Ame
-zaga Bragadier de los Rs. extõs y Governr.
-g˜ral de esta Prov.^a q.^e lo firmó en la Ciudad de 
-la Na. Orleans a trese de Marzo de mil setts. settta.
-y Seis años——
-Andres Almonester
-y Roxas s.^no pu.^co
