--- a/_includes/excerpts/d0218.md
+++ b/_includes/excerpts/d0218.md
@@ -1,1 +1,107 @@
-sample text for site generation
+## Translation  
+
+Left margin:  
+Lo pres[to] la  
+p.te exp.te no sa-  
+ver firmar  
+nueva orleans  
+25 de Junio de  
+1773 doy fe  
+linsmiento? [Almonseter?]  
+1, circled [in archival pen]  
+#276 [in archival pen]  
+
+Main page:
+Catharina mulata esclava de los 
+bienes de S. Juan Bautista Destrehan, en
+la mejor forma que haya lugar en [derecho (drõ)] 
+ante V. U. paresco y digo que por
+hacerme bien algunas personas y en
+recompensa de beneficios y servicios
+que les ha [prometrar] hacer me quieren
+aprontar el dinero a que pueda hacen-
+der [ascender] el valor de mi de mi libertad y la de mi
+hija nom.da (nombrada) Felicité de edad de cinco a.s (años)
+en cuya atencion suplico a A. V. S. se[si]
+sirva mandar a S. Gabriel Facensda [Gabriel Fazende]
+y a S.S. Estevan Boré que administran
+dichos bienes, nombren un terrero [tasaderp]  para
+que hagan mi estimacion y la de mi
+hija, que yo por mi parte nombró a S.
+# page 3 [badly ripped, missing words]
+—-------- me otorguen la car- [carta?]
+[sic] —------conforme a nro por tanto
+—----[sic] se sirva proveer y man-
+dar —--[sic] llevo ?pedir por ?ser refusar
+?lo sitios y tuvo en lo necessario [symbol] (esta/ella)
+
+Traslado.-----
+Unzaga
+
+Proveio lo el Sr. Don Luis de Unzaga y
+Amezaga Brig.r de los ers. Ex.e y Gov.or  
+Gral de esta Prov`a [Provincia] por S.M. que lo fir-
+mo en veinte y cinco de junio de mil siete cientos sesenta y tres 
+
+senores Almonester
+y Roxas S.No. pou ce
+
+En el mismo dia hise saver el decreto
+Q. ante de esta a la mulata Cathalina 
+doy Fee…
+Almonsters [signed]
+
+
+
+# English Translation
+
+Left margin:  
+[We present]   
+this present file. Not   
+Knowing how to sign.  
+New Orleans  
+25th of June of  
+1773   
+
+
+
+
+Main page:   
+Catharina, mulata esclava (enslaved mulata woman) of the [belonging to] / the estate of S. Juan Bautista Destrehan (S. Jean Baptiste Destrehan) in /
+the best manner provided by law/ 
+before Your Lordship appears and states that / 
+I have served well certain persons and in 
+recompense for the benefits and services
+that I have promised to do, I want to 
+prepare the money that I can to amount 
+to the value of my freedom and that of my 
+daughter  [hija, girl child] named Felicité, five years of age, 
+for this consideration I request Your Honour, if it serves
+you, to order Sr. Gabriel Facensda [Fazende]
+and Sr. Estevan Boré (Etienne de Boré), who administer
+this estate, to name an assessor to
+do my estimation and that of my
+daughter [hija, girl child], which I, for my part, named Sr…
+[badly ripped, missing words]
+—-------- grant me the [car…] (carta, i.e. manumission document)  
+ —------according to ours, therefore
+—----it serves to provide and 
+order —- [summary: provide what is necessary for this]
+
+Translated.
+
+Unzaga
+
+[Prepared by] S. Don Luis de Unzaga
+Amezaga Briganderia of the Royal Armies and Governor 
+General of this Province for His Magesty 
+Signed
+25th of June of 1773
+
+Senores Almonester
+y Roxas, S. 
+
+On the same day, have seen these contents before this the 
+mulata Cathalina, 
+I attest.
+[Signature of Almonester]
