--- a/_includes/excerpts/d0281.md
+++ b/_includes/excerpts/d0281.md
@@ -25,22 +25,7 @@ for the freedom of Maturine, negress”
 LHQ v. 10 p. 133 - entry below: 
 
 
-  
-
-
-
-
-
-## Transcription and Translation
-
-
-### Spanish Transcription
-
-
-
-
-### English Translation
-**[f.0 r]** 
+## Transcription
 
 
 Pruevas [Pruebas]
@@ -276,6 +261,7 @@ N.16  N 3808
 Oct 29 1773 [modern, in pencil]
 
 
+## English Translation
 
 
 [f.0 v] BLANK
