--- a/_includes/excerpts/d0005.md
+++ b/_includes/excerpts/d0005.md
@@ -1,4 +1,4 @@
-## Literal Transcription
+<!--## Literal Transcription  
 
 Present.do antemi oydia de la fha por las mismas partes sin firmas por expresar no sauenlo hasen Nueva Orleans veinte y tres a de enero de mil setecientas nov.ta años doy feé___ Perdomo.
 
@@ -6,11 +6,12 @@ Present.do antemi oydia de la fha por las mismas partes sin firmas por expresar 
 Pedro Morsu y Baptista Bourgiñon, Indios mestiso y Sambo, ante V.S. en la mejor forma que haya lugar en drõ parecemos y Decimos: que alnuestro conbienes se nos admita Informacion de tgõs, y que los que presentaremos Juramentados en forma y sin diferirnos, declaren si nos conosen por hijos naturales de Cathalina India natural, de nacio Chi.., y madre de la mestisa nombrada Maria Paget; cuyas declaraciones evaquadas que sean, se nos entreguen originales para usar del drõ que nos compreta: portanto.
 
 
-A. V. S. Sup.mos se s'erva proveer y mandar hacer como pedimos, con justa costas juramos no proceder de malicia y en lo nesesario &a.
+A. V. S. Sup.mos se s'erva proveer y mandar hacer como pedimos, con justa costas juramos no proceder de malicia y en lo nesesario &a. -->
 
 
-	
-## Modernized Transcription
+
+
+## Modernized Transcription  
 
 Presentado ante mí hoy día de la fecha por la misma parte sin forma por expresar no se venlo hacer Nueva Orleans enero de mil setecientas noventa años. Doy fe, Perdomo.
 
