--- a/_includes/excerpts/d0137.md
+++ b/_includes/excerpts/d0137.md
@@ -1,246 +1,275 @@
-# Transcription
+<!-- Transcription and Translation Template -->
+
+<!--
+Document_ID: d0137
+Link to document: https://lacolonialdocs.org/document/10603 
+Title: Mama Comba's Gombo
+Status: ready for publication 
+(Select as many as needed: not started/transcription in process/translation in process/transcription complete/translation complete/needs annotation/needs review/ready for publication)
+Additional Notes:
+-->
+
+## Transcription  
 
 4 Septembre 1764  
 Interrogatoire  
 De la negresse  
 Comba  
 
-			4 Septmbre 1764
-Interrogatoire fait par nous Conseiller Commissaire 
-En Cette partie a La Requette du procureur General 
-Du Roy et En Vertu de L’ordonnance de Monsieur
-Dabadie, a La Negresse nommé Comba Contre
-Le Negre nommé Louis word detenir a prison 
-De Cette Ville ainsi qu’il ensuit 
-A Eté Emmené de prison La Negresse nommé
-Comba demeurant a L’hopital de pauvres, 
-Laquelle apres serment par elle fait de Dire
-Verité fus laquelle seroit par nous interrogée 
-La été ainsi qu’il ensuite
-Interrogée de Son nom age qualité et Demeure 
-A Dit S’appeller Julie autrement Comba agée
-De Cinquante ans nation manenga demeurant a 
+			4 Septmbre 1764  
+Interrogatoire fait par nous Conseiller Commissaire  
+En Cette partie a La Requette du procureur General  
+Du Roy et En Vertu de L’ordonnance de Monsieur  
+Dabadie, a La Negresse nommé Comba Contre  
+Le Negre nommé Louis word detenir a prison  
+De Cette Ville ainsi qu’il ensuit  
+A Eté Emmené de prison La Negresse nommé  
+Comba demeurant a L’hopital de pauvres,  
+Laquelle apres serment par elle fait de Dire  
+Verité fus laquelle seroit par nous interrogée  
+La été ainsi qu’il ensuite  
+Interrogée de Son nom age qualité et Demeure  
+A Dit S’appeller Julie autrement Comba agée  
+De Cinquante ans nation manenga demeurant a  
 L’hopital des pauvres  
-
-Interrogée Si elle Connoit Le nommé Louis ou foÿ
-A Dit qu’elle Le Connoit depuis qu’il a til dans du
-pais Cy et nous pas auparavant 
-Interrogée depuis quand elle n’avoit pas vü Le dit
-Louis
-A Dit ne L’avoir pas Vü depuis deux mois qui etoit
-Avant d’estre word en prison
-Interrogée Commant est la quelle Connoissoit Louis
-A Dit qu'après que Louis fus dessendü des illinois
-elle avoit Coutume D’aller Souvant Voir Louison
-Dans Le Jardin Cantrelle, qu’un jour elle ÿ fut
-Elle ÿ fut et ÿ trouva plusieurs Negres Bambaras
-Qu’ils S’amuserent beaucoup qu’ensuite La
-Negresse Louision fut La chercher une autre fois
+<br>
+Interrogée Si elle Connoit Le nommé Louis ou foÿ  
+A Dit qu’elle Le Connoit depuis qu’il a til dans du  
+pais Cy et nous pas auparavant  
+Interrogée depuis quand elle n’avoit pas vü Le dit  
+Louis  
+A Dit ne L’avoir pas Vü depuis deux mois qui etoit  
+Avant d’estre word en prison  
+Interrogée Commant est la quelle Connoissoit Louis  
+A Dit qu'après que Louis fus dessendü des illinois  
+elle avoit Coutume D’aller Souvant Voir Louison  
+Dans Le Jardin Cantrelle, qu’un jour elle ÿ fut  
+Elle ÿ fut et ÿ trouva plusieurs Negres Bambaras  
+Qu’ils S’amuserent beaucoup qu’ensuite La  
+Negresse Louision fut La chercher une autre fois  
 
 [start of page 2]
 
-Qu’elle ÿ Retourna et qu’elle ÿ trouva encore Le negre
-Louis qu’ils ÿ Souperent ensemble que La negresse
-nommé fatema apartenant a Mr de La fourniere avoit
-Preparé Le Souper qu’alors elle dit a Louis que ta qu’il
-Word La qu’il etois marron, que Louis Luy dit 
-Qu’il etois Dessendu avec Sa Maitresse des illinois 
-Qu’il n’etois pas marron qu’elle Luÿ dit Commant 
-L’gagner a vivre puis que L ne travaillait point
-Que Le dit Louis Luÿ dit que Sa maitresse Le 
-Laissoit Libre parce qu’il avoir mal a une Jambe
-Et Jusqu’a le qu’il fut Guerÿ que pour manger 
-Il n’en manquoit point qu’il en trouvoit par tout
-Dans La Ville; a Dit Depuis que Ladite Louison 
-Avoit permission de Son maitre pour le Souper 
-Oü ils ne mangerent que du Cochon qui apartenoit 
-A La Negresse Louison 
-Interrogé S’ils etoient plusieurs 
-A Dit qu’ils etoient plusieurs mais qu’elle ne Les
-connnoit point 
-A Dit qu’elle L’y a vü plusieurs fois
-Interrogée Si Le Negre Louis n’avoit pas Couchée avec 
-Elle Dans Sa Cabane 
-A Dit qu’on ÿ qu’il ÿ avoit Couché qu’elle ne Scavoir 
-Pas qu’il fut marron
-Interrogée Si elle ne Luy avoir pas donné un Gombeau 
-Avec Cezar et une autre negresse
-A Dit qu’on ÿ Cela etoit Vraÿ qu’ils etoient quatre 
-que Cezar meme Donna a Louis Cinquante
-sols pour aller chercher Le filet qu’il ÿ fut et 
-Burent tous ensemble
+Qu’elle ÿ Retourna et qu’elle ÿ trouva encore Le negre  
+Louis qu’ils ÿ Souperent ensemble que La negresse  
+nommé fatema apartenant a Mr de La fourniere avoit  
+Preparé Le Souper qu’alors elle dit a Louis que ta qu’il  
+Word La qu’il etois marron, que Louis Luy dit  
+Qu’il etois Dessendu avec Sa Maitresse des illinois  
+Qu’il n’etois pas marron qu’elle Luÿ dit Commant  
+L’gagner a vivre puis que L ne travaillait point  
+Que Le dit Louis Luÿ dit que Sa maitresse Le  
+Laissoit Libre parce qu’il avoir mal a une Jambe  
+Et Jusqu’a le qu’il fut Guerÿ que pour manger  
+Il n’en manquoit point qu’il en trouvoit par tout  
+Dans La Ville; a Dit Depuis que Ladite Louison  
+Avoit permission de Son maitre pour le Souper  
+Oü ils ne mangerent que du Cochon qui apartenoit  
+A La Negresse Louison  
+Interrogé S’ils etoient plusieurs  
+A Dit qu’ils etoient plusieurs mais qu’elle ne Les  
+connnoit point  
+A Dit qu’elle L’y a vü plusieurs fois  
+Interrogée Si Le Negre Louis n’avoit pas Couchée avec  
+Elle Dans Sa Cabane  
+A Dit qu’on ÿ qu’il ÿ avoit Couché qu’elle ne Scavoir  
+Pas qu’il fut marron  
+Interrogée Si elle ne Luy avoir pas donné un Gombeau  
+Avec Cezar et une autre negresse  
+A Dit qu’on ÿ Cela etoit Vraÿ qu’ils etoient quatre  
+que Cezar meme Donna a Louis Cinquante  
+sols pour aller chercher Le filet qu’il ÿ fut et  
+Burent tous ensemble  
 
-
+<br>
 [start of page 3]
 
 
-Interrogée Si Louis ne Luÿ avoit pas donné une
-Carotte de tabac 
-A Dit qu’on ÿ qu’il Luy en avoit Donné une mais
-Qu’il La repris apres qu’il en avoir Volé Dix
-Avec de La toile Dont il a fait des chemises et des Culottes
-Qu’il ne Se Cachoit point qu’il Les Cousoit devant
-La porte de L’hopital qu’elle Luÿ avoir donné des
-Equilles 
-Interrogée Si Elle ne Scait pas Si Louis avoir Volé 
-ailleurs 
-A Dit qu’elle Scait que Louis avoit Vollé des hardes 
-A La Negresse au Dr. Baschemin, mais qu’il avoit
-Ensuite vendu Les hardes mais non pas L’argent
-qu’il avoit Volé aussi qu’il L’avoit employé en 
-taffia 
-Interrogée Si elle na pas fut que Louis avoir Volé un
-Cochon aux Jesuits
-A Dit que Cela etoit Vraÿ que Louis avoit tué un
-Cochon, mais Comme Ce Cochon etoit gros il ne 
-Peut Le faire Sortir par dessus La palissade
-Que Luÿ et Cesar Le partagerent, et chacun
-Fu passer sa portion, par dessus La palissade
-Et que Louis fut vendre LaSienne au bayou
-Qu’au surplus Ce Louis Luy en Donna un
-morceau qu’ils mangerent ensemble tous Les
-Deux. 
-Interrogée Si elle na pas Connoissance que Le negre Louis
-au volé chez La Dame Daneville 
-A Dit qu’etant a Laver au fossé elle avoir vü
-beaucoup de Linge a secher dans Le Jardin au Sr. 
-Cantrelle qu’elle avoit demandé a Louison
-Si elle avoit Lavé qu’elle Luÿ dit que non, qui
-C’etots du Linge au Negre Louis, mais que Ce Linge
+Interrogée Si Louis ne Luÿ avoit pas donné une  
+Carotte de tabac  
+A Dit qu’on ÿ qu’il Luy en avoit Donné une mais  
+Qu’il La repris apres qu’il en avoir Volé Dix  
+Avec de La toile Dont il a fait des chemises et des Culottes  
+Qu’il ne Se Cachoit point qu’il Les Cousoit devant  
+La porte de L’hopital qu’elle Luÿ avoir donné des  
+Equilles  
+Interrogée Si Elle ne Scait pas Si Louis avoir Volé  
+ailleurs  
+A Dit qu’elle Scait que Louis avoit Vollé des hardes  
+A La Negresse au Dr. Baschemin, mais qu’il avoit  
+Ensuite vendu Les hardes mais non pas L’argent  
+qu’il avoit Volé aussi qu’il L’avoit employé en  
+taffia  
+Interrogée Si elle na pas fut que Louis avoir Volé un  
+Cochon aux Jesuits  
+A Dit que Cela etoit Vraÿ que Louis avoit tué un  
+Cochon, mais Comme Ce Cochon etoit gros il ne  
+Peut Le faire Sortir par dessus La palissade  
+Que Luÿ et Cesar Le partagerent, et chacun  
+Fu passer sa portion, par dessus La palissade  
+Et que Louis fut vendre LaSienne au bayou  
+Qu’au surplus Ce Louis Luy en Donna un  
+morceau qu’ils mangerent ensemble tous Les  
+Deux.  
+Interrogée Si elle na pas Connoissance que Le negre Louis  
+au volé chez La Dame Daneville  
+A Dit qu’etant a Laver au fossé elle avoir vü  
+beaucoup de Linge a secher dans Le Jardin au Sr.  
+Cantrelle qu’elle avoit demandé a Louison  
+Si elle avoit Lavé qu’elle Luÿ dit que non, qui  
+C’etots du Linge au Negre Louis, mais que Ce Linge  
 
-[start of page 4]
+<br>
+[start of page 4]  
+<br>  
+N’avoit Jamais eté porté chez elle.  
+Interrogée Si elle n’a pas Connoissance que Le negre  
+Louis Couchoit souvant chez Louison dans La  
+Cabanne au jardin de Cantrelle  
+A Dit que depuis que Louis etoit dessendu des illinois  
+Il Couchoit dans Ladite Cabanne ou chez elle  
+Qu’il ÿ avoit meme Couché plusieurs fois  
+Qui est tout Ce qu’elle a Dit Scavoir  
+Lecture a elle faite du present interrogatoire   
+A Dit Le bien entendu Ses reponses Contenir Verité  
+Et ÿ a persisté et Na S’en Signer  
 
-N’avoit Jamais eté porté chez elle.
-Interrogée Si elle n’a pas Connoissance que Le negre
-Louis Couchoit souvant chez Louison dans La
-Cabanne au jardin de Cantrelle
-A Dit que depuis que Louis etoit dessendu des illinois
-Il Couchoit dans Ladite Cabanne ou chez elle
-Qu’il ÿ avoit meme Couché plusieurs fois
-Qui est tout Ce qu’elle a Dit Scavoir
-Lecture a elle faite du present interrogatoire 
-A Dit Le bien entendu Ses reponses Contenir Verité
-Et ÿ a persisté et Na S’en Signer
 
 
-
+<br>
 ## English Translation  
+
 September  4, 1764  
 Interrogation  
-of the Negresse 
+of the Negresse  
 Comba  
 
 September 4, 1764  
-Interrogation made for the Advisor Commissioner 
-in the petition of the Attorney General 
-Of the King and of the order of Mr. 
-Dabadie, of The Negresse named Comba against 
-The Negre named Louis  detained in prison 
-in this city as follows
-Taken from the prison the Negress
-Comba stays at the Hospital des Pauvres [Charity Hospital, Hospital of the Poor] after taking oath she says
-Truth being questioned by us
-The summer after
-Questioned name age and residence
-She said she is called Julie otherwise Comba aged
-Fifty years nation Mandinga living in 
-the hospital of the poor
+Interrogation made for the Advisor Commissioner  
+in the petition of the Attorney General  
+Of the King and of the order of Mr.  
+Dabadie, of The Negresse named Comba against  
+The Negre named Louis  detained in prison  
+in this city as follows  
+Taken from the prison the Negress  
+Comba stays at the Hospital des Pauvres[^Charity fn]  
+after taking oath she says  
+Truth being questioned by us  
+The summer after  
+Questioned name age and residence  
+She said she is called Julie otherwise Comba aged  
+Fifty years nation Mandinga living in  
+the hospital of the poor  
 
-Questioned if she knows the named Louis or Foÿ
-Said that she’s known him since he was in this
-Country here and not before
-Questioned since when she had not seen the said
-Louis
-Said not to have seen him for two months, because she has been in prison
-Questioned how she knows Louis
-She said after Louis left Illinois
-She was accustomed to go to Louison’s cabin 
-in the garden of Cantrelle, one day she was
-She was visiting and found there many Bambara negres
-That They had a very good time then the
-Negresse Louison went to look for her another time
+Questioned if she knows the named Louis or Foÿ  
+Said that she’s known him since he was in this  
+Country here and not before  
+Questioned since when she had not seen the said  
+Louis  
+Said not to have seen him for two months, because she has been in prison  
+Questioned how she knows Louis  
+She said after Louis left Illinois  
+She was accustomed to go to Louison’s cabin  
+in the garden of Cantrelle, one day she was  
+She was visiting and found there many Bambara negres  
+That They had a very good time then the  
+Negresse Louison went to look for her another time  
 
 Start of page 2
 
-She went back and found the negre again
-Louis the supper together that the negresse named Fatema [Fatima] belonging to Mr. de Lafrenier had
-She told Louid that she prepared the soup
-asked Louis whether he was a maroon and he said 
-he was with his mistress of Illinois 
-He is not a maroon she, she asked how
-He earned a living since he isn’t working
-He said Louis said this mistress 
-Let him live free because his leg injury 
-And until he was able to eat
-He could not eat 
-In the city; said Louis
-His master gave permission for supper
-They ate only pig which belonged
-To the negresse Louison
-Asked if there were several
-She said there were several but she 
-doesn’t know them
-She said she had seen him many times
-Asked if the Negro Louis had slept with 
-her in the cabin
-Said that she did not sleep there that she did not know
-that he was a maroon
-Asked if she had given him gumbo
-With Cezar and another Negresse
-She said it is true there were four
-That Cezar gave Louis fifty
-Sols [money] to go find the filet that it was and
-Drank together 
+She went back and found the negre again  
+Louis the supper together that the negresse named Fatema [Fatima] belonging to Mr.   de Lafrenier had  
+She told Louid that she prepared the soup  
+asked Louis whether he was a maroon and he said  
+he was with his mistress of Illinois  
+He is not a maroon she, she asked how  
+He earned a living since he isn’t working  
+He said Louis said this mistress  
+Let him live free because his leg injury  
+And until he was able to eat  
+He could not eat  
+In the city; said Louis  
+His master gave permission for supper  
+They ate only pig which belonged  
+To the negresse Louison  
+Asked if there were several  
+She said there were several but she  
+doesn’t know them  
+She said she had seen him many times  
+Asked if the Negro Louis had slept with  
+her in the cabin  
+Said that she did not sleep there that she did not know  
+that he was a maroon  
+Asked if she had given him gumbo  
+With Cezar and another Negresse  
+She said it is true there were four  
+That Cezar gave Louis fifty  
+Sols [money] to go find the filet that it was and  
+Drank together  
 
-
+<br>
 Start of Page 3
+<br>
 
+Asked if Louis had not given her a  
+[amount] of tobacco  
+Said that he gave her one but  
+That he took it back after he stole ten  
+With the material he made shirts and pants  
+He did not hide he sewed in front  
+She gave it to Louis at the door of the hospital  
 
-Asked if Louis had not given her a
-[amount] of tobacco
-Said that he gave her one but
-That he took it back after he stole ten
-With the material he made shirts and pants 
-He did not hide he sewed in front
-She gave it to Louis at the door of the hospital
+We asked if Louis stole anywhere else 
 
-We asked if Louis stole anywhere else
+She said she knew that Louis had stolen clothes  
+A negress of Dr. Baschemin, but that he had  
+Sold the clothes but not for money  
+He stole so that he could use (?)  
 
-She said she knew that Louis had stolen clothes
-A negress of Dr. Baschemin, but that he had 
-Sold the clothes but not for money
-He stole so that he could use (?)
+Questioned had Louis not stolen the Jesuits pig  
 
-Questioned had Louis not stolen the Jesuits pig
+She said it was true Louis had killed the  
+Pig, the pig was big he could not get it over the palisade  
 
-She said it was true Louis had killed the 
-Pig, the pig was big he could not get it over the palisade
+Louis and Cesar shared it  
+Taking it over the palisade  
+Louis went to sell it at the bayou  
+Moreover Louis gave one  
+Piece that they all ate together  
 
-Louis and Cesar shared it
-Taking it over the palisade
-Louis went to sell it at the bayou 
-Moreover Louis gave one 
-Piece that they all ate together 
-
-Questioned if the di not know that the negro 
-Louis
-Went to La Dame Daneville
-He said he saw
-A lot of clothes to dry in the garden of Sr. 
-Cantrelle she asked Louis
-If she had washed, Louis said no, who
-It is the clothing of the Negro Louis, but it is not his clothes
-
+Questioned if the di not know that the negro  
+Louis  
+Went to La Dame Daneville  
+He said he saw  
+A lot of clothes to dry in the garden of Sr.  
+Cantrelle she asked Louis  
+If she had washed, Louis said no, who  
+It is the clothing of the Negro Louis, but it is not his clothes  
+<br>
 Start page 4
+<br> 
 
-She wasn’t brought home
-Questioned if she knew that the negro
-Louis often went to the 
-Home and garden of Cantrelle
-She said since Louis came from Illinois
-He sleeps in the cabin or at her place
-He slept there many times
-To her knowledge that is what she said
-Sharing this interrogation with her 
-She said his answer is true
-She insisted she not sign
+She wasn’t brought home  
+Questioned if she knew that the negro  
+Louis often went to the  
+Home and garden of Cantrelle  
+She said since Louis came from Illinois  
+He sleeps in the cabin or at her place  
+He slept there many times  
+To her knowledge that is what she said  
+Sharing this interrogation with her  
+She said his answer is true  
+She insisted she not sign  
+
+
+<br>
+## Notes  
+
+[^Charity fn]: Charity Hospital, Hospital of the Poor
+
+[^2]:
+
+[^3]:
+
+<!-- Add as necessary, and remember that you don't need to number them as you go, you could also do something like [^marronage note](:) in the text and at the end, and Markdown will enumerate it for you :-) -->
+
