--- a/_includes/excerpts/d0137.md
+++ b/_includes/excerpts/d0137.md
@@ -48,7 +48,7 @@ Elle ÿ fut et ÿ trouva plusieurs Negres Bambaras
 Qu’ils S’amuserent beaucoup qu’ensuite La  
 Negresse Louision fut La chercher une autre fois  
 
-[start of page 2]
+start of page 2
 
 Qu’elle ÿ Retourna et qu’elle ÿ trouva encore Le negre  
 Louis qu’ils ÿ Souperent ensemble que La negresse  
@@ -81,8 +81,7 @@ que Cezar meme Donna a Louis Cinquante
 sols pour aller chercher Le filet qu’il ÿ fut et  
 Burent tous ensemble  
 
-<br>
-[start of page 3]
+start of page 3
 
 
 Interrogée Si Louis ne Luÿ avoit pas donné une  
@@ -119,9 +118,9 @@ Cantrelle qu’elle avoit demandé a Louison
 Si elle avoit Lavé qu’elle Luÿ dit que non, qui  
 C’etots du Linge au Negre Louis, mais que Ce Linge  
 
-<br>
-[start of page 4]  
-<br>  
+
+start of page 4
+
 N’avoit Jamais eté porté chez elle.  
 Interrogée Si elle n’a pas Connoissance que Le negre  
 Louis Couchoit souvant chez Louison dans La  
@@ -136,7 +135,7 @@ Et ÿ a persisté et Na S’en Signer
 
 
 
-<br>
+
 ## English Translation  
 
 September  4, 1764  
@@ -207,9 +206,9 @@ That Cezar gave Louis fifty
 Sols [money] to go find the filet that it was and  
 Drank together  
 
-<br>
+
 Start of Page 3
-<br>
+
 
 Asked if Louis had not given her a  
 [amount] of tobacco  
@@ -262,7 +261,7 @@ She said his answer is true
 She insisted she not sign  
 
 
-<br>
+
 ## Notes  
 
 [^Charity fn]: Charity Hospital, Hospital of the Poor
