thumbnials again because i think i messed them up

--- a/_includes/excerpts/d0010.md
+++ b/_includes/excerpts/d0010.md
@@ -1,24 +1,52 @@
 ## Transcription  
 
-A Messieurs Du Conseil Superieur De la province De la Louisianne  
+[front]  
+Par devant Le No^re
+Royal de la Province de la Louisiane Refident a la Nouvelles orleans
+prefence des temoins Souffignez fut prefent En sa personne M. Jean
+Baptiste Raguet Conseiller au Conseil Superier demeurant a la
+N^lle Orleans lequel volontairement reconnu et Confesse devans
+Monsieur de Salmon Cy devant Commissaire ordonnateur a la
+Louisiane la Somme de huit mille Livres pour une famille des
+Negres et negresses dont le pere S'apelle Dominique, Marianne
+Sa femme, hypolite leur fille ___ée, Louis agée de douze ans
+ou Environs, joseph agé de Cinq ans, anne agée de quatre ans Et demy
+Francois a la mamelle Et Claude fils d'hypolite a la mamelle en
+faisant le nombre de huit tetes que Mond. Sieur de Salmon, luy
+a [p]resentement Vendus Et Livré Exepté le nommé Dominique
+Cuisinier Chef de la famille que Mond. Sieur vendeur S'est a
+Reserve(?) demmener En France pour le servir dans le [?^?] du Roy
+qui doit justamment Sortir(?) Et quil promet et Soblige de Renvoyer
+a Se frais En Ce pa__ par les premier vaisseaux qui viendront
+a la Louisiane Sy non et au Cas que le d.t Negre vint a mourir
+ou a Etre pris par les Ennemies de la France ou quil ne fut point
+En parfaite Sante avant dEtre remis a Monss(?). Raguet Monss(?).~
+de Salmon promet diminuer sur la Somme principalle de huit
+mille Livres celle de deux mille cinq cent Livres quoy a Eté
+Estimé Et Evalué Entre luy et le ___ acquereur le d^t Negre
+apellé Dominique la quelle d^e somme de huit mille livres
 
-Supplie humblement, Raphael Bernard negre Libre, qui a L’honneur De Vous representer, que depuis
-Environ Cinq ans, qu’il S’estoit Engagé en France avec Monsieur Dumanoir a raison De deux Cent franc En argent Blanc De gages tours les ans Et Un habit Complet, avec Sa Depouille il Seroit venu avec Mondit Sr Dumanoir Dans Cette Colonie, Et L’auroit Seruy avec fidelite Et affection jusqua Ce jour, Mais que depuis Deux Ans Luy ayant Demandé Son Conges parce qu’il Ne luy payoit point Ses gages qu’il ne luy donnoit point Ny Ses Vielles Depouilles, Ledit Sr Dumanoir, L’auroit traité avec rigueur, En le faisant rester plus D’un Mois aux ferts Et Le traitante a Coup De baton, toute les fois qu’il luy demandoit ses gages, ce que le Suppliant a Enduré plus de deux ans Enlier n’ayant point vous demander justice, mais voyant qu’il pert souteins, Et qu’il Se tous Ses hardes a Son Service Et Ne recoit De luy que Des Mauvais traitement Il a Se Vous Suplies Messieurs De luy faise payer ses gages Et de Ne point L’obliger a Servir D’avantage a Monsieur Dumanoir, Et De luy accorder Son prepage pour france, outre Cela Messieurs il Vous plaise L’ordonner a Monsieur D luy faire rendre Son Coffre qui Est aux Chauouacha parce qu’on luy a dit que Ledit Sr vouloir Luy relemis Et D’avoir La bonté De luy faire payer Le Montant Du Memoire S’y joint que le Supliant a fournoy pour Monsieur Dumanoir, C’est La grace qu’il Espere De vos bontes ordinaire Et ferez justice  
-
-A la Nouvelle orleans Ce 26? Juillet 1724
-Soit commen que audit dumanoir pour
-Repondre dans le jour a la nouvelle orleans 
-Le 27 Juillet 1724  
-
-
-<br>
-## English Translation  
-To Gentlemen Of The Superior Council Of The Province Of Louisiana  
-
-Humbly beg, Raphael Bernard free negro, who has the honor to represent you, that since 
-Approximately Five years, that He was Engaged in France with Monsieur Dumanoir for two Hundred francs In white silver in wages every year And A full suit, with His Remains he Would have come with said Sr Dumanoir In This Colony, And The would have served Seruy with fidelity And affection until This day, But that for Two Years having asked Him for His Leave because he did not pay him his wages that he did not give him nor His Old Remains, Said Sr Dumanoir, He would have treated with rigor, By making him stay in irons for more than a month And treating him with a blow from the baton, every time he asked for his wages, which the Supplicant Endured for more than two whole years not having to ask you for justice, but seeing that he loses his support, and that he puts all his clothes at his service and only receives bad treatment from him, he has begged you gentlemen to make him pay his wages and to not oblige him not to serve Monsieur Dumanoir anymore, and to grant him his prepage for france, besides that gentlemen, please order him to have his chest returned to him which is at the Chauouacha because he has been told that the said sir wants him released and to have the kindness to make him pay the amount of the memory attached to that the Suppliant has provided for Monsieur Dumanoir, It is the grace that he hopes From your ordinary kindness And will do justice  
-
-In New Orleans This 26? July 1724
-Either commen que audit dumanoir for
-Meet in the day in new orleans
-July 27, 1724  
+[back]  
+Monsf Raguet soblige et Promet de la donner et payer au
+Mond. Sieur de Salmon ou au porter des presentes En Especes(?)
+Sonnautes ou lettres du Change fus --. les tresories generaux
+de la marine , les quelles Lettres de Change seront adresseés
+au S.~ Hersan Commissionaire de Monss. de Salmon demeurant
+a la Provx de fert Rue S.t denis a ____ le d.t payements
+fixé En quatre années prochaines et consecutives Et payements
+Egaux d'année En année a Commencer de ce jour C'est a dire
+deux mille Livres par Chaque année, aux condition que
+Mond.S.~ Raguet ne pourra vendre ny Engager aucuns des d.tes
+Negres Negresses ou Negrillons Cy devant vendus qu'il ne les
+ayt(?) Entierment payée pour seureté du quel paymenet _la obligée
+hypotequé tous ses biens meubles Et immeubles Et
+Speciallement la d.t famille de Negres Et pour Lexecution des
+presentes Monssl Raguet ordinaire au quel lieu il Consent
+que tous a des soient fautes en vertu des presentes Car ainsy
+a Etée Convenu et arreté Entre les parties, promettant Et
+Renoncant a toutes Choses a ce Contraines(?) fait et passée a
+la Nouvelle Orleans province de la louisiane le Seize
+decembre Et ___ des l'an mille Sept Cent quarante quatre
+prefence des S.r augustin chantalou et jacques cantrelle
+temoins u demeureants Et out(?) Signé ainsy signée __ minuttes
+Salmon, Raguet, Chantalou, Contrelle Et Nous No.ne Soussigne
