--- a/_keywords/d0035.md
+++ b/_keywords/d0035.md
@@ -25,7 +25,7 @@ comments: This is the 676-page one. Starts w/ first-person testimony from Maria 
   of the violence done to her. Contains testimony from enslaved witnesses. I stopped
   reading on p. 105;there is definitely more of a story here.
 order: '02'
-thumbnail: "/img/derivatives/iiif/images/d0035/full/250,/0/default.jpg"
+thumbnail: "/img/derivatives/simple/d0035_d0035-01/thumbnail.jpg"
 full: "/img/derivatives/iiif/images/d0035/full/1140,/0/default.jpg"
 manifest: "/img/derivatives/iiif/d0035/manifest.json"
 ---
