--- a/_keywords/d0128.md
+++ b/_keywords/d0128.md
@@ -23,7 +23,7 @@ collection: keywords
 comments: still working through the multiple stories in this doc, will return to it
   this week and next- OB
 order: '04'
-thumbnail: "/img/derivatives/iiif/images/d0128/full/250,/0/default.jpg"
+thumbnail: "/img/derivatives/simple/d0128_d0128-01/thumbnail.jpg"
 full: "/img/derivatives/iiif/images/d0128/full/1140,/0/default.jpg"
 manifest: "/img/derivatives/iiif/d0128/manifest.json"
 ---
