--- a/_keywords/d0129.md
+++ b/_keywords/d0129.md
@@ -28,7 +28,7 @@ layout: keywords_item
 collection: keywords
 comments: see 1739-11-07-02 and 1748-03-22-01
 order: '05'
-thumbnail: "/img/derivatives/iiif/images/d0129/full/250,/0/default.jpg"
+thumbnail: "/img/derivatives/simple/d0129_d0129-01/thumbnail.jpg"
 full: "/img/derivatives/iiif/images/d0129/full/1140,/0/default.jpg"
 manifest: "/img/derivatives/iiif/d0129/manifest.json"
 ---
