--- a/_keywords/d0210.md
+++ b/_keywords/d0210.md
@@ -23,7 +23,7 @@ layout: keywords_item
 collection: keywords
 comments: Baptiste
 order: '07'
-thumbnail: "/img/derivatives/iiif/images/d0210_pg01/full/250,/0/default.jpg"
+thumbnail: "/img/derivatives/simple/d0210_d0210-01/thumbnail.jpg"
 full: "/img/derivatives/iiif/images/d0210_pg01/full/1140,/0/default.jpg"
 manifest: "/img/derivatives/iiif/d0210/manifest.json"
 ---
