--- a/_keywords/d0218.md
+++ b/_keywords/d0218.md
@@ -25,7 +25,7 @@ collection: keywords
 comments: "(Included in summer workshop docs. - LKB); included in SE; full transcription
   ROUGH drafted; translation coming (JMJ, 2022-10-22)"
 order: '08'
-thumbnail: "/img/derivatives/iiif/images/d0218/full/250,/0/default.jpg"
+thumbnail: "/img/derivatives/simple/d0218_d0218-02/thumbnail.jpg"
 full: "/img/derivatives/iiif/images/d0218/full/1140,/0/default.jpg"
 manifest: "/img/derivatives/iiif/d0218/manifest.json"
 ---
