image size adjustment and mama comba excerpt formatting

--- a/_keywords/d0137.md
+++ b/_keywords/d0137.md
@@ -22,6 +22,6 @@ collection: keywords
 comments: 'Multi-part case referencing gumbo ("gombeaux"). Gumbo doc:  https://lacolonialdocs.org/document/10603'
 order: '06'
 thumbnail: "/img/derivatives/simple/d0137_d0137-01/thumbnail.jpg"
-full: "/img/derivatives/iiif/images/d0137_pg01/full/1140,/0/default.jpg"
+full: "/img/derivatives/simple/d0137_d0137-01/fullwidth.jpg"
 manifest: "/img/derivatives/iiif/d0137/manifest.json"
 ---
